--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.app.farmaciadelivery"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.2.1'
     implementation 'com.google.firebase:firebase-database:20.2.2'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging:23.4.1'
 
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
