--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,18 @@
 {
   "storage": {
     "rules": "rulestorage"
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
 }
